--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "sora.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,17 @@
   "bugs": {
     "url": "https://github.com/shiguredo/sora.js/issues"
   },
-  "homepage": "https://github.com/shiguredo/sora.js#readme"
+  "homepage": "https://github.com/shiguredo/sora.js#readme",
+  "devDependencies": {
+    "espowerify": "^1.0.0",
+    "karma": "^0.13.15",
+    "karma-browserify": "^4.4.0",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-requirejs": "^0.2.2",
+    "mocha": "^2.3.3",
+    "phantomjs": "^1.9.18",
+    "power-assert": "^1.1.0",
+    "requirejs": "^2.1.20"
+  }
 }
