--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/shiguredo/sora.js#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.0.15",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
     "espowerify": "^1.0.0",
+    "gulp": "^3.9.0",
     "karma": "^0.13.15",
     "karma-browserify": "^4.4.0",
     "karma-mocha": "^0.2.0",
@@ -26,6 +30,9 @@
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "power-assert": "^1.1.0",
-    "requirejs": "^2.1.20"
+    "requirejs": "^2.1.20",
+    "run-sequence": "^1.1.4",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
