--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "sora.js",
   "scripts": {
+    "dist": "gulp dist",
     "test": "karma start"
   },
   "repository": {
@@ -22,6 +23,8 @@
     "browserify": "^12.0.1",
     "espowerify": "^1.0.0",
     "gulp": "^3.9.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.1",
     "karma": "^0.13.15",
     "karma-browserify": "^4.4.0",
     "karma-mocha": "^0.2.0",
