--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,17 @@
 {
     "rules": {
-        "indent": [
-            2,
-            2
-        ],
-        "quotes": [
-            2,
-            "double"
-        ],
-        "linebreak-style": [
-            2,
-            "unix"
-        ],
-        "semi": [
-            2,
-            "always"
-        ]
+        "indent": [2, 2],
+        "quotes": [2, "double"],
+        "linebreak-style": [2, "unix"],
+        "semi": [2, "always"]
     },
     "env": {
-        "es6": false,
+        "es6": true,
         "browser": true
+    },
+    "globals": {
+      "module": true,
+      "$": true
     },
     "extends": "eslint:recommended"
 }
