--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browserify": "^12.0.1",
     "espowerify": "^1.0.0",
     "gulp": "^3.9.0",
+    "gulp-header": "^1.7.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.1",
     "karma": "^0.13.15",
