--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sora.js",
+  "name": "sora-js-sdk",
   "version": "0.1.0",
   "description": "WebRTC SFU Sora Signaling Library",
   "main": "dist/sora.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shiguredo/sora.js.git"
+    "url": "git+https://github.com/shiguredo/sora-js-sdk.git"
   },
   "author": "Shiguredo Inc.",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/shiguredo/sora.js/issues"
+    "url": "https://github.com/shiguredo/sora-js-sdk/issues"
   },
-  "homepage": "https://github.com/shiguredo/sora.js#readme",
+  "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
     "babel-preset-es2015": "^6.1.2",
     "babelify": "^7.2.0",
