--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
+    "babel-core": "^6.2.1",
     "babel-plugin-espower": "^2.0.0",
     "babel-preset-es2015": "^6.1.2",
     "babelify": "^7.2.0",
