--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WebRTC SFU Sora Signaling Library",
   "main": "dist/sora.js",
   "scripts": {
-    "dist": "gulp dist",
+    "dev": "gulp watch",
+    "build": "gulp dist",
     "eslint": "gulp eslint",
     "test": "karma start"
   },
@@ -24,13 +25,16 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "envify": "^3.4.0",
     "eslint": "^2.4.0",
     "espowerify": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-header": "^1.7.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.3",
+    "gulp-watchify": "^0.5.0",
     "karma": "^0.13.22",
     "karma-browserify": "^5.0.2",
     "karma-mocha": "^0.2.2",
@@ -42,6 +46,6 @@
     "requirejs": "^2.2.0",
     "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "watchify": "^3.7.0"
   }
 }
