--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
     "babel-core": "^6.7.2",
+    "babel-eslint": "^5.0.0",
     "babel-plugin-espower": "^2.1.2",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
@@ -28,6 +29,7 @@
     "envify": "^3.4.0",
     "eslint": "^2.4.0",
     "espowerify": "^1.0.0",
+    "estraverse-fb": "^1.3.1",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-header": "^1.7.1",
