--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "WebRTC SFU Sora Signaling Library",
   "main": "dist/sora.min.js",
   "scripts": {
-    "dev": "gulp watch",
     "build": "gulp dist",
-    "eslint": "gulp eslint",
+    "eslint": "eslint ./src/sora.js",
     "test": "karma start"
   },
   "repository": {
@@ -14,31 +13,28 @@
     "url": "git+https://github.com/shiguredo/sora-js-sdk.git"
   },
   "author": "Shiguredo Inc.",
-  "license": "MIT",
+  "license": "Apache License 2.0",
   "bugs": {
     "url": "https://github.com/shiguredo/sora-js-sdk/issues"
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
-    "babel-core": "^6.21.0",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-espower": "^2.3.1",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-plugin-espower": "^2.3.2",
+    "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.3.0",
+    "browserify": "^14.0.0",
     "envify": "^4.0.0",
-    "eslint": "^3.13.1",
+    "eslint": "^3.15.0",
     "espowerify": "^1.1.0",
     "estraverse-fb": "^1.3.1",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^3.0.1",
     "gulp-header": "^1.8.8",
-    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-watchify": "^0.6.0",
-    "karma": "^1.3.0",
-    "karma-browserify": "^5.1.0",
+    "gulp-uglify": "^2.0.1",
+    "karma": "^1.4.1",
+    "karma-browserify": "^5.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
@@ -49,6 +45,6 @@
     "requirejs": "^2.3.2",
     "run-sequence": "^1.2.2",
     "vinyl-buffer": "^1.0.0",
-    "watchify": "^3.8.0"
+    "watchify": "^3.9.0"
   }
 }
