--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "babel-plugin-espower": "^2.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
-    "browserify": "^14.0.0",
     "envify": "^4.0.0",
     "eslint": "^3.15.0",
     "espowerify": "^1.1.0",
     "estraverse-fb": "^1.3.1",
     "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-header": "^1.8.8",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.1",
     "karma": "^1.4.1",
@@ -43,8 +44,6 @@
     "phantomjs": "^2.1.7",
     "power-assert": "^1.4.2",
     "requirejs": "^2.3.2",
-    "run-sequence": "^1.2.2",
-    "vinyl-buffer": "^1.0.0",
-    "watchify": "^3.9.0"
+    "run-sequence": "^1.2.2"
   }
 }
