--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/sora.min.js",
   "scripts": {
     "build": "gulp dist",
-    "eslint": "eslint ./src/sora.js",
+    "check": "flow; eslint ./src/sora.js; exit 0;",
     "test": "karma start"
   },
   "repository": {
@@ -22,12 +22,15 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-plugin-espower": "^2.3.2",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
     "envify": "^4.0.0",
     "eslint": "^3.15.0",
+    "eslint-plugin-flowtype": "^2.30.0",
     "espowerify": "^1.1.0",
     "estraverse-fb": "^1.3.1",
+    "flow-bin": "^0.41.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-header": "^1.8.8",
