--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "WebRTC SFU Sora Signaling Library",
   "main": "dist/sora.min.js",
   "scripts": {
-    "build": "gulp dist",
+    "build": "webpack --cache false --config webpack.config.js",
     "check": "flow; eslint ./src/sora.js; exit 0;",
     "test": "karma start"
   },
@@ -19,34 +19,21 @@
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-espower": "^2.3.2",
+    "babel-loader": "^6.4.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
-    "babelify": "^7.3.0",
-    "envify": "^4.0.0",
-    "eslint": "^3.15.0",
-    "eslint-plugin-flowtype": "^2.30.0",
-    "espowerify": "^1.1.0",
-    "estraverse-fb": "^1.3.1",
+    "eslint": "^3.17.1",
+    "eslint-plugin-flowtype": "^2.30.3",
     "flow-bin": "^0.41.0",
-    "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-header": "^1.8.8",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.1",
-    "karma": "^1.4.1",
-    "karma-browserify": "^5.1.1",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-requirejs": "^1.1.0",
+    "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
-    "phantomjs": "^2.1.7",
     "power-assert": "^1.4.2",
-    "requirejs": "^2.3.2",
-    "run-sequence": "^1.2.2"
+    "webpack": "^2.2.1"
   }
 }
