package json の license 表記を修正する

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/shiguredo/sora-js-sdk.git"
   },
   "author": "Shiguredo Inc.",
-  "license": "Apache License 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/shiguredo/sora-js-sdk/issues"
   },
