--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sora-js-sdk",
   "version": "1.13.0",
-  "description": "WebRTC SFU Sora Javascript SDK",
+  "description": "WebRTC SFU Sora JavaScript SDK",
   "main": "dist/sora.min.js",
   "scripts": {
     "build": "NODE_ENV=development webpack --cache false --config webpack.config.js",
