--- a/package.json
+++ b/package.json
@@ -21,22 +21,21 @@
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.12.0",
-    "eslint-plugin-flowtype": "^2.39.1",
-    "flow-bin": "^0.59.0",
-    "http-server": "^0.10.0",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "eslint": "^6.1.0",
+    "eslint-plugin-flowtype": "^3.12.2",
+    "flow-bin": "^0.104.0",
+    "http-server": "^0.11.1",
+    "karma": "^4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-webpack": "^2.0.6",
-    "mocha": "^4.0.1",
-    "power-assert": "^1.4.4",
-    "webpack": "^3.8.1"
+    "karma-webpack": "^4.0.2",
+    "mocha": "^6.2.0",
+    "power-assert": "^1.6.1",
+    "webpack": "^4.38.0"
   }
 }
