--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-preset-minify": "^0.5.0",
+    "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-flowtype": "^3.12.2",
@@ -33,9 +34,11 @@
     "flow-bin": "^0.104.0",
     "http-server": "^0.11.1",
     "karma": "^4.2.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-rollup-preprocessor": "^7.0.2",
     "karma-webpack": "^4.0.2",
     "mocha": "^6.2.0",
     "power-assert": "^1.6.1",
