--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^1.18.2",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-replace": "^2.2.0",
     "webpack": "^4.38.0"
   }
 }
