--- a/package.json
+++ b/package.json
@@ -41,13 +41,10 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-rollup-preprocessor": "^7.0.2",
-    "karma-webpack": "^4.0.2",
     "mocha": "^6.2.0",
-    "power-assert": "^1.6.1",
     "prettier": "^1.18.2",
     "rollup": "^1.17.0",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "webpack": "^4.38.0"
+    "rollup-plugin-replace": "^2.2.0"
   }
 }
