--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-flowtype": "^3.12.2",
+    "eslint-plugin-flowtype-errors": "^4.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "flow-bin": "^0.104.0",
     "http-server": "^0.11.1",
