SORA_VERSION を SORA_JS_SDK_VERSION に変更する

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,8 +23,7 @@
     "prettier"
   ],
   "globals": {
-    "process": true,
-    "VERSION": true
+    "SORA_JS_SDK_VERSION": true
   },
   "rules": {
     "flowtype-errors/show-errors": 2,
