--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "release": "NODE_ENV=production rollup -c",
     "server": "http-server ./example",
     "lint": "eslint ./src",
-    "test": "karma start"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,11 +24,11 @@
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-preset-minify": "^0.5.1",
-    "chai": "^4.2.0",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-flowtype": "^4.2.0",
@@ -36,13 +36,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "flow-bin": "^0.106.2",
     "http-server": "^0.11.1",
-    "karma": "^4.3.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-rollup-preprocessor": "^7.0.2",
-    "mocha": "^6.2.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
