--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "NODE_ENV=development rollup -c -w",
     "prerelease": "yarn lint",
     "release": "NODE_ENV=production rollup -c",
-    "server": "http-server ./example",
+    "server": "serve ./example",
     "lint": "eslint ./src",
     "test": "jest"
   },
@@ -34,11 +34,11 @@
     "eslint-plugin-flowtype-errors": "^4.1.0",
     "eslint-plugin-prettier": "^3.1.1",
     "flow-bin": "^0.109.0",
-    "http-server": "^0.11.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "rollup": "^1.23.1",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-replace": "^2.2.0"
+    "rollup-plugin-replace": "^2.2.0",
+    "serve": "^11.3.0"
   }
 }
