--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "1.16.0",
   "description": "WebRTC SFU Sora JavaScript SDK",
   "main": "dist/sora.min.js",
+  "module": "dist/sora.min.js",
+  "types": "dist/sora.d.ts",
   "scripts": {
     "build": "NODE_ENV=development rollup -c",
     "watch": "NODE_ENV=development rollup -c -w",
     "prerelease": "yarn lint",
     "release": "NODE_ENV=production rollup -c",
     "server": "serve ./example",
-    "lint": "eslint ./src",
+    "lint": "eslint --ext .ts ./src",
+    "fmt": "eslint --fix --ext .ts ./src",
     "test": "jest"
   },
   "repository": {
@@ -23,22 +26,22 @@
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
-    "@babel/core": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-flow": "^7.0.0",
-    "babel-eslint": "^10.0.3",
-    "babel-preset-minify": "^0.5.1",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-flowtype": "^4.3.0",
-    "eslint-plugin-flowtype-errors": "^4.1.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "flow-bin": "^0.109.0",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "rollup": "^1.23.1",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "serve": "^11.3.0"
+    "@rollup/plugin-replace": "^2.3.1",
+    "@types/jest": "^25.2.1",
+    "@types/webrtc": "^0.0.26",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.3",
+    "http-server": "^0.12.1",
+    "jest": "^25.3.0",
+    "prettier": "^2.0.4",
+    "rollup": "^2.6.1",
+    "rollup-plugin-babel-minify": "^10.0.0",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "serve": "^11.3.0",
+    "ts-jest": "^25.3.1",
+    "typescript": "^3.8.3"
   }
 }
