--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.1",
     "@types/jest": "^25.2.1",
     "@types/webrtc": "^0.0.26",
@@ -42,5 +44,8 @@
     "serve": "^11.3.0",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "sora-e2ee": "https://github.com/shiguredo/sora-e2ee.git#develop"
   }
 }
