--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,19 +11,27 @@
   ],
   "scripts": {
     "build": "NODE_ENV=development rollup -c",
+    "lint": "eslint --ext .ts ./src",
+    "fmt": "prettier --write src",
     "test": "jest --detectOpenHandles --forceExit"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-replace": "^2.3.1",
-    "@types/jest": "^25.2.1",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@types/jest": "^26.0.15",
     "@types/webrtc": "^0.0.26",
-    "jest": "^25.3.0",
-    "rollup": "^2.6.1",
+    "@typescript-eslint/eslint-plugin": "2.27.0",
+    "@typescript-eslint/parser": "2.27.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-prettier": "3.1.3",
+    "jest": "^26.6.3",
+    "prettier": "^2.1.2",
+    "rollup": "^2.33.1",
     "rollup-plugin-babel-minify": "^10.0.0",
-    "rollup-plugin-typescript2": "^0.27.0",
-    "ts-jest": "^25.3.1",
+    "rollup-plugin-typescript2": "^0.29.0",
+    "ts-jest": "^26.4.3",
     "typescript": "^3.8.3"
   },
   "dependencies": {
