--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -10,17 +10,19 @@
     "build": "yarn build:worker && yarn build:development",
     "build:development": "NODE_ENV=development rollup -c rollup.config.js",
     "build:worker": "npx tsc --project tsconfig.worker.json",
+    "fmt": "prettier --write src",
+    "lint": "eslint --ext .ts ./src",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.2",
     "@types/webrtc": "^0.0.26",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "rollup": "^2.10.0",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-typescript2": "^0.27.1",
