--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "types": "dist/sora.d.ts",
   "scripts": {
     "build": "npx lerna run build",
+    "lint": "npx lerna run lint",
+    "fmt": "npx lerna run fmt",
+    "test": "npx lerna run test",
     "start": "npx serve -S -l 8080 ./example"
   },
   "repository": {
