--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -3,8 +3,8 @@
   "version": "2020.5.0-canary.0",
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
-  "main": "dist/sora_e2ee.min.js",
-  "module": "dist/sora_e2ee.min.js",
+  "main": "dist/sora_e2ee.mjs",
+  "module": "dist/sora_e2ee.mjs",
   "types": "dist/sora_e2ee.d.ts",
   "scripts": {
     "build": "yarn build:worker && yarn build:development",
@@ -24,7 +24,6 @@
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.1.2",
     "rollup": "^2.10.0",
-    "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-typescript2": "^0.27.1",
     "typescript": "^3.9.2"
   }
