sdk の成果物出力先を変更する

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "NODE_ENV=development rollup -c",
+    "build": "rollup -c",
     "lint": "eslint --ext .ts ./src",
     "fmt": "prettier --write src",
     "test": "jest --detectOpenHandles --forceExit"
