e2ee package の成果物を gitignore に追加する

--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@sora/e2ee",
   "version": "2020.5.0-canary.3",
+  "description": "WebRTC SFU Sora JavaScript E2EE Library",
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
   "main": "dist/sora_e2ee.mjs",
