go-wasm のパッケージ構成を変更する

--- a/packages/go-wasm/package.json
+++ b/packages/go-wasm/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@sora/go-wasm",
-  "version": "2020.5.0-canary.1",
-  "main": "dist/wasm_exec.js",
-  "module": "dist/wasm_exec.js",
-  "types": "dist/wasm_exec.d.ts",
+  "version": "2020.5.0-canary.3",
+  "main": "src/wasm_exec.js",
+  "module": "src/wasm_exec.js",
+  "types": "src/wasm_exec.d.ts",
   "files": [
     "dist"
   ],
