--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sora-js-sdk",
-  "version": "2020.6.0-canary.2",
+  "version": "2020.6.0",
   "description": "WebRTC SFU Sora JavaScript SDK",
   "main": "dist/sora.min.js",
   "module": "dist/sora.mjs",
