通知を sora-demo チャンネルにに向けるようにする

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,7 @@ jobs:
         if: failure()
         uses: rtCamp/action-slack-notify@v2.1.0
         env:
-          SLACK_CHANNEL: sora-sdk
+          SLACK_CHANNEL: sora-demo
           SLACK_COLOR: danger
           SLACK_TITLE: Failure test
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
