npm client を yarn に揃える

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "module": "dist/sora.mjs",
   "types": "dist/sora.d.ts",
   "scripts": {
-    "bootstrap": "npx lerna bootstrap",
-    "build": "npx lerna run build",
-    "lint": "npx lerna run lint",
-    "fmt": "npx lerna run fmt",
-    "test": "npx lerna run test",
+    "bootstrap": "npx lerna bootstrap --npm-client yarn",
+    "build": "npx lerna run --npm-client yarn build",
+    "lint": "npx lerna run --npm-client yarn lint",
+    "fmt": "npx lerna run --npm-client yarn fmt",
+    "test": "npx lerna run --npm-client yarn test",
     "start": "npx serve -S -l 8080 ./example",
     "packages:upgrade": "npx lerna clean -y && npx lerna exec -- npx ncu -u && yarn bootstrap",
     "release:minor": "./scripts/versioning.sh minor && npx lerna run build",
