--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
+    "watch": "rollup -c -w",
     "lint": "eslint --ext .ts ./src",
     "fmt": "prettier --write src",
     "test": "jest --detectOpenHandles --forceExit"
