eslint の typeParameter の rule を修正する

--- a/packages/sdk/.eslintrc.json
+++ b/packages/sdk/.eslintrc.json
@@ -61,6 +61,10 @@
         "selector": "parameter",
         "format": ["camelCase"],
         "leadingUnderscore": "allow"
+      },
+      {
+        "selector": "typeParameter",
+        "format": ["PascalCase"]
       }
     ]
   }
