--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sora/e2ee",
-  "version": "2020.6.0",
+  "version": "2020.7.0-canary.0",
   "description": "WebRTC SFU Sora JavaScript E2EE Library",
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
@@ -29,6 +29,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@sora/go-wasm": "^2020.6.0"
+    "@sora/go-wasm": "^2020.7.0-canary.0"
   }
 }
