--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sora/sdk",
-  "version": "2020.6.1",
+  "version": "2020.7.0-canary.0",
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
   "main": "dist/sora.min.js",
@@ -36,6 +36,6 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@sora/e2ee": "^2020.6.0"
+    "@sora/e2ee": "^2020.7.0-canary.0"
   }
 }
