tsconfig に baseUrl と paths を追加する

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -21,7 +21,11 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./src/@types/*"]
+    }
   },
   "include": [
     "src/**/*.ts"
