--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
             ${{ runner.os }}-yarn-
       - run: yarn install
       - run: yarn bootstrap
+      - run: yarn build
       - run: yarn lint
       - run: yarn test
       - name: Slack Notification
