eslintrc を修正する

--- a/packages/sdk/.eslintrc.json
+++ b/packages/sdk/.eslintrc.json
@@ -11,7 +11,7 @@
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
