--- a/packages/e2ee/.eslintrc.json
+++ b/packages/e2ee/.eslintrc.json
@@ -10,7 +10,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:prettier/recommended",
-    "prettier/@typescript-eslint"
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
