eslint の rule を追加する

--- a/packages/sdk/.eslintrc.json
+++ b/packages/sdk/.eslintrc.json
@@ -72,6 +72,7 @@
         "selector": "variable",
         "format": ["camelCase", "UPPER_CASE"]
       }
-    ]
+    ],
+    "curly": "error"
   }
 }
