@types/webrtc をパッケージ一覧から削除する

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -13,8 +13,7 @@
     "resolveJsonModule": true,
     "newLine": "LF",
     "types": [
-      "jest",
-      "webrtc"
+      "jest"
     ],
     "lib": [
       "esnext",
