--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "lerna": "^4.0.0",
     "npm-check-updates": "^11.6.0",
     "serve": "^11.3.2"
+  },
+  "resolutions": {
+    "get-pkg-repo": "4.1.2"
   }
 }
