--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sora/sdk",
-  "version": "2021.1.6",
+  "version": "2021.2.0-canary.0",
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
   "main": "dist/sora.min.js",
@@ -35,7 +35,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "@sora/e2ee": "^2021.1.0",
+    "@sora/e2ee": "^2021.2.0-canary.0",
     "fflate": "^0.7.1"
   }
 }
