--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@sora/sdk",
+  "description": "WebRTC SFU Sora JavaScript SDK",
   "version": "2021.2.0-canary.2",
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
@@ -17,22 +18,22 @@
     "test": "jest --detectOpenHandles --forceExit"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-commonjs": "^21.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^3.0.0",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@typescript-eslint/parser": "4.30.0",
+    "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "eslint": "7.32.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "jest": "^27.1.0",
-    "prettier": "^2.3.2",
-    "rollup": "^2.56.3",
+    "jest": "^27.2.4",
+    "prettier": "^2.4.1",
+    "rollup": "^2.58.0",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "@sora/e2ee": "^2021.2.0-canary.2",
