yarn と lerna を削除する

--- a/package.json
+++ b/package.json
@@ -6,17 +6,7 @@
   "module": "dist/sora.mjs",
   "types": "dist/sora.d.ts",
   "scripts": {
-    "bootstrap": "npx lerna bootstrap --npm-client yarn",
-    "build": "npx lerna run --npm-client yarn build",
-    "lint": "npx lerna run --npm-client yarn lint",
-    "fmt": "npx lerna run --npm-client yarn fmt",
-    "test": "npx lerna run --npm-client yarn test",
-    "start": "npx serve -S -l 8080 ./example",
-    "packages:upgrade": "npx lerna clean -y && npx lerna exec -- npx ncu -u && yarn bootstrap",
-    "release:major": "./scripts/versioning.sh major && npx lerna run build",
-    "release:minor": "./scripts/versioning.sh minor && npx lerna run build",
-    "release:patch": "./scripts/versioning.sh patch && npx lerna run build",
-    "release:canary": "./scripts/versioning.sh canary && npx lerna run build"
+    "start": "npx serve -S -l 8080 ./example"
   },
   "repository": {
     "type": "git",
@@ -32,7 +22,6 @@
     "dist"
   ],
   "devDependencies": {
-    "lerna": "^4.0.0",
     "npm-check-updates": "^11.8.5",
     "serve": "^12.0.1"
   },
