--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   },
   "resolutions": {
     "get-pkg-repo": "4.1.2"
-  }
+  },
+  "workspaces": [
+    "packages/sdk",
+    "packages/e2ee",
+    "packages/go-wasm"
+  ]
 }
