--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,15 +1,5 @@
 {
   "name": "@sora/sdk",
-  "description": "WebRTC SFU Sora JavaScript SDK",
-  "version": "2021.2.0-canary.3",
-  "author": "Shiguredo Inc.",
-  "license": "Apache-2.0",
-  "main": "dist/sora.min.js",
-  "module": "dist/sora.mjs",
-  "types": "dist/sora.d.ts",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w",
@@ -36,7 +26,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@sora/e2ee": "^2021.2.0-canary.3",
     "fflate": "^0.7.1"
+    "@sora/e2ee": "^2021.1.0",
   }
 }
