--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,13 +20,13 @@
     "jest": "^27.2.4",
     "prettier": "^2.4.1",
     "rollup": "^2.58.0",
-    "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "fflate": "^0.7.1"
     "@sora/e2ee": "^2021.1.0",
+    "fflate": "^0.7.1",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
