--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   ],
   "devDependencies": {
     "npm-check-updates": "^11.8.5",
-    "serve": "^12.0.1"
+    "serve": "^12.0.1",
+    "typedoc": "^0.22.10"
   },
   "resolutions": {
     "get-pkg-repo": "4.1.2"
