rollup-plugin-typescript2 から @rollup/plugin-typescript に変更する

--- a/packages/e2ee/tsconfig.json
+++ b/packages/e2ee/tsconfig.json
@@ -17,7 +17,8 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+    "declarationDir": "."
   },
   "include": [
     "src/sora_e2ee.ts"
