--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.4.1",
@@ -24,7 +25,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "rollup": "^2.61.1",
-    "rollup-plugin-typescript2": "^0.31.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
