--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -11,6 +11,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.1",
     "@rollup/plugin-replace": "^3.0.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
@@ -20,7 +21,6 @@
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
     "rollup": "^2.61.1",
-    "rollup-plugin-typescript2": "^0.31.1",
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4"
   },
