--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -20,7 +20,8 @@
       "dom",
       "dom.iterable",
       "scripthost"
-    ]
+    ],
+    "declarationDir": "."
   },
   "include": [
     "src/**/*.ts"
