--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "test": "npm run test --workspaces",
     "start": "npx serve -S -l 8080 ./example",
     "doc": "npx typedoc",
-    "release:major": "./scripts/versioning.sh major",
-    "release:minor": "./scripts/versioning.sh minor",
-    "release:patch": "./scripts/versioning.sh patch",
-    "release:canary": "./scripts/versioning.sh canary"
+    "release:canary": "./scripts/release_canary.sh"
   },
   "repository": {
     "type": "git",
