--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sora-js-sdk",
   "version": "2022.1.0",
   "description": "WebRTC SFU Sora JavaScript SDK",
-  "main": "dist/sora.min.js",
+  "main": "dist/sora.js",
   "module": "dist/sora.mjs",
   "types": "dist/sora.d.ts",
   "scripts": {
