--- a/packages/e2ee/package.json
+++ b/packages/e2ee/package.json
@@ -9,7 +9,7 @@
   "types": "dist/sora_e2ee.d.ts",
   "scripts": {
     "build": "npm run build:worker && npm run build:development",
-    "build:development": "NODE_ENV=development rollup -c rollup.config.js",
+    "build:development": "NODE_ENV=development rollup -c rollup.config.mjs --bundleConfigAsCjs",
     "build:worker": "npx tsc --project tsconfig.worker.json",
     "fmt": "prettier --write src",
     "lint": "eslint --ext .ts ./src",
