--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sora/sdk",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c rollup.config.mjs --bundleConfigAsCjs",
     "watch": "rollup -c -w",
     "lint": "eslint --ext .ts ./src",
     "fmt": "prettier --write src",
