--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -12,17 +12,18 @@
     "@rollup/plugin-node-resolve": "15.0.0",
     "@rollup/plugin-replace": "4.0.0",
     "@rollup/plugin-typescript": "9.0.1",
+    "@swc/core": "1.3.8",
+    "@swc/jest": "0.2.23",
     "@types/jest": "29.1.2",
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
     "eslint": "8.25.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
-    "jest": "29.1.2",
+    "jest": "29.2.0",
     "jest-environment-jsdom": "29.1.2",
     "prettier": "2.7.1",
     "rollup": "2.79.1",
-    "ts-jest": "29.0.3",
     "typescript": "4.8.4"
   },
   "dependencies": {
