--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -12,7 +12,7 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/plugin-typescript": "10.0.1",
-    "@shiguredo/lyra-wasm": "../../../lyra-wasm/",
+    "@shiguredo/lyra-wasm": "git+https://github.com/shiguredo/lyra-wasm.git",
     "@swc/core": "1.3.24",
     "@swc/jest": "0.2.24",
     "@types/jest": "29.2.4",
