--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -25,6 +25,7 @@
     "jest-environment-jsdom": "29.3.1",
     "prettier": "2.8.1",
     "rollup": "3.8.1",
+    "rollup-plugin-delete": "2.0.0",
     "typescript": "4.9.4"
   },
   "dependencies": {
