--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Prepare static files
         run: |
           mkdir _site/
-          cp sora/lyra.js _site/
+          cp dist/sora.js _site/
           cp example/check.html _site/
           cp example/sw.html _site/
       - name: Upload files
