--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -25,7 +25,7 @@ jobs:
           mkdir _site/
           cp dist/sora.js _site/
           cp example/check.html _site/
-          cp example/sw.html _site/
+          cp example/sw.js _site/
       - name: Upload files
         uses: actions/upload-pages-artifact@v1
       - name: Slack Notification
