--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,7 +7,8 @@
     ":prHourlyLimitNone",
     ":prConcurrentLimit10",
     "group:recommended",
-    "group:allNonMajor"
+    "group:allNonMajor",
+    "schedule:weekly",
   ],
   "dependencyDashboard": false,
   "packageRules": [
