declarationDir には "../../" を指定 (@rollup/plugin-typescript-11.1.0 対応)

--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -21,7 +21,7 @@
       "dom.iterable",
       "scripthost"
     ],
-    "declarationDir": "."
+    "declarationDir": "../../"
   },
   "include": [
     "src/**/*.ts"
