--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "module": "dist/sora.mjs",
   "types": "dist/sora.d.ts",
   "scripts": {
-    "build": "npm run build --workspaces",
-    "lint": "npm run lint --workspaces",
-    "fmt": "npm run fmt --workspaces",
-    "test": "npm run test --workspaces",
+    "build": "pnpm -r --filter=./packages/* build",
+    "lint": "pnpm -r --filter=./packages/* lint",
+    "fmt": "pnpm -r --filter=./packages/* fmt",
+    "test": "pnpm -r --filter=./packages/* test",
     "start": "npx serve -S -l 8080 ./example",
     "doc": "npx typedoc",
     "release:canary": "./scripts/release_canary.sh"
