--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Shiguredo Inc.",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/shiguredo/sora-js-sdk/issues"
+    "url": "https://discord.gg/shiguredo"
   },
   "homepage": "https://github.com/shiguredo/sora-js-sdk#readme",
   "files": [
