nodejs の最小を 18 系にする

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: test
+name: ci
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: ["16", "18", "20"]
+        node: ["18", "20"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
