--- a/package.json
+++ b/package.json
@@ -28,12 +28,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.11.0",
-    "@typescript-eslint/parser": "6.11.0",
-    "eslint": "8.53.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "prettier": "3.1.0",
+    "@biomejs/biome": "1.3.3",
     "serve": "14.2.1",
     "typedoc": "0.25.3",
     "typescript": "5.2.2",
@@ -42,7 +37,7 @@
   "resolutions": {
     "get-pkg-repo": "5.0.0"
   },
-  "packageManager": "pnpm@8.10.3",
+  "packageManager": "pnpm@8.10.5",
   "engines": {
     "node": ">=18.17.1"
   }
