Revert "Revert "Biome 1.4.0 の lint を通す""
This reverts commit c8298e907c6e627441df9cac52a2e560f8c8a4d3.

--- a/biome.json
+++ b/biome.json
@@ -6,13 +6,7 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true,
-      "style": {
-        "noUselessElse": "off"
-      },
-      "complexity": {
-        "useArrowFunction": "off"
-      }
+      "recommended": true
     }
   },
   "formatter": {
