コメント追加

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,6 @@
+# テストに利用する Sora の Signaling URL を指定してください
 VITE_SORA_SIGNALING_URL=ws://127.0.0.1:5000/signaling
+# テストに利用する Sora の ChannelID のプレフィックスを指定してください
 VITE_SORA_CHANNEL_ID_PREFIX=sora-js-sdk-e2e-test_
+# テストに利用するアクセストークンを指定してください、不要であれば何の値でも問題ありません
 VITE_ACCESS_TOKEN=access_token
